Rename class and some little changes